Complete CSS_flex

--- a/css_flex/assets/custom_grid.css
+++ b/css_flex/assets/custom_grid.css
@@ -1,5 +1,5 @@
 .col {
-  float: left;
+  /* float: left; */
   box-sizing: border-box;
 }
 
@@ -36,7 +36,7 @@ with a class attribute containing 'col-' */
 .cf:after {
   content: '';
   display: block;
-  clear: both;
+  /* clear: both; */
 }
 
 /* CSS Day 6 media queries */
